Debut de calendrier. Certaines librairies ne marchent pas avec Android Studio, j'essaie de comprendre pourquoi

--- a/UnistraMobile/app/src/main/AndroidManifest.xml
+++ b/UnistraMobile/app/src/main/AndroidManifest.xml
@@ -22,6 +22,10 @@
             android:name=".AnnuaireActivity"
             android:label="@string/title_activity_annuaire" >
         </activity>
+        <activity
+            android:name=".CalendrierActivity"
+            android:label="@string/title_activity_calendrier" >
+        </activity>
     </application>
 
 </manifest>
