--- a/UnistraMobile/app/src/main/AndroidManifest.xml
+++ b/UnistraMobile/app/src/main/AndroidManifest.xml
@@ -40,6 +40,11 @@
             android:label="@string/title_activity_calendrier" >
         </activity>
 
+        <activity
+            android:name=".LoadingMap"
+            android:label="LoadingMap" >
+        </activity>
+
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
