--- a/UnistraMobile/app/build.gradle
+++ b/UnistraMobile/app/build.gradle
@@ -24,4 +24,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:21.0.3'
     compile 'com.google.android.gms:play-services:6.5.87'
     compile 'com.roomorama:caldroid:1.1.8'
+    compile 'com.github.alamkanak:android-week-view:1.2.1'
 }
