--- a/UnistraMobile/app/build.gradle
+++ b/UnistraMobile/app/build.gradle
@@ -19,10 +19,19 @@ android {
     }
 }
 
+repositories {
+    maven { url 'http://clinker.47deg.com/nexus/content/groups/public' }
+}
+
 dependencies {
+    compile 'com.nineoldandroids:library:2.4.0+'
+    compile ('com.fortysevendeg.swipelistview:swipelistview:1.0-SNAPSHOT@aar') {
+        transitive = true
+    }
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.3'
     compile 'com.google.android.gms:play-services:6.5.87'
     compile 'com.roomorama:caldroid:1.1.8'
     compile 'com.github.alamkanak:android-week-view:1.2.1'
+
 }
