--- a/UnistraMobile/app/src/main/AndroidManifest.xml
+++ b/UnistraMobile/app/src/main/AndroidManifest.xml
@@ -33,7 +33,9 @@
         </activity>
         <activity
             android:name=".AnnuaireActivity"
-            android:label="@string/title_activity_annuaire" >
+            android:label="@string/title_activity_annuaire"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait">
         </activity>
         <activity
             android:name=".CalendrierActivity"
