Rotation de l'écran désactivée pour le Calendrier

--- a/UnistraMobile/app/src/main/AndroidManifest.xml
+++ b/UnistraMobile/app/src/main/AndroidManifest.xml
@@ -42,7 +42,9 @@
         </activity>
         <activity
             android:name=".CalendrierActivity"
-            android:label="@string/title_activity_calendrier" >
+            android:label="@string/title_activity_calendrier"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait">
         </activity>
         <activity
             android:name=".ServiceActivity"
