--- a/UnistraMobile/app/src/main/AndroidManifest.xml
+++ b/UnistraMobile/app/src/main/AndroidManifest.xml
@@ -5,9 +5,8 @@
     <uses-library android:name="com.google.android.maps" />
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.WAKE_LOCK"/>
-
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_CALENDAR" />
@@ -36,22 +35,29 @@
         </activity>
         <activity
             android:name=".AnnuaireActivity"
-            android:label="@string/title_activity_annuaire"
             android:configChanges="orientation"
-            android:screenOrientation="portrait">
+            android:label="@string/title_activity_annuaire"
+            android:screenOrientation="portrait" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.mobile.unistra.unistramobile.MainActivity" />
         </activity>
         <activity
             android:name=".CalendrierActivity"
-            android:label="@string/title_activity_calendrier"
             android:configChanges="orientation"
-            android:screenOrientation="portrait">
+            android:label="@string/title_activity_calendrier"
+            android:screenOrientation="portrait" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.mobile.unistra.unistramobile.MainActivity" />
         </activity>
         <activity
             android:name=".ServiceActivity"
             android:label="@string/title_activity_service" >
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
@@ -71,20 +77,27 @@
             android:label="@string/title_activity_maps" >
         </activity>
 
-        <receiver android:name=".service.BackgroundReceiver"/>
+        <receiver android:name=".service.BackgroundReceiver" />
+        <receiver
+            android:name=".service.BootReceiver"
+            android:enabled="false" >
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
+        </receiver>
 
+        <service android:name=".service.UpdateCal" />
 
-        <receiver android:name=".service.BootReceiver" android:enabled="false">
-
-
-        <intent-filter>
-
-        <action android:name="android.intent.action.BOOT_COMPLETED"/>
-
-    </intent-filter>
-
-    </receiver>
-
-        <service android:name=".service.UpdateCal"/>
+        <activity
+            android:name=".RUActivity"
+            android:label="@string/title_activity_ru"
+            android:parentActivityName=".MainActivity"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.mobile.unistra.unistramobile.MainActivity" />
+        </activity>
     </application>
+
 </manifest>
